Finish login reg feature

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Registration</h1>
     <form action="">
-        
+        <p>
+            <label for="email">Email: </label>
+            <input type="email" name="email">
+        </p>
+                <p>
+            <label for="password">Password: </label>
+            <input type="password" name="password">
+        </p>
+        <button>Submit</button>
     </form>
 </body>
 </html>
