--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="#">Logout</a>
     <h1>Registration</h1>
     <form action="">
         <p>
