--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="#">Logout</a>
+    <p>finish onne more time</p>
     <h1>Registration</h1>
     <form action="">
         <p>
